Fix volume slider on mobile device and improve responsive design for most devices

--- a/src/Styles/Class/_Appearance.scss
+++ b/src/Styles/Class/_Appearance.scss
@@ -88,6 +88,10 @@
     @include ButtonsGroup-Container();
 }
 
+.Hide-Control {
+    display: none;
+}
+
 //Styles for the cards container with shadow
 .Card-Style {
     background-color: $White;
